--- a/src/EventModal/EventModal.module.css
+++ b/src/EventModal/EventModal.module.css
@@ -2,8 +2,9 @@
   display: flex;
   padding: 12px;
 
-  flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
   align-items: center;
+  justify-content: end;
 }
 
 .name {
