--- a/src/Calendar/Day/EventView/EventView.module.css
+++ b/src/Calendar/Day/EventView/EventView.module.css
@@ -19,6 +19,15 @@
   background: linear-gradient(0, rgba(173,216,230,0) 0%, rgba(173,216,230,1) 100%);
 }
 
-.more, .event {
+.event {
   cursor: pointer;
+}
+
+.big {
+  margin: 4px 0;
+
+  padding: 6px 6px 6px 12px;
+
+  font-size: 1em;
+  border-radius: 6px;
 }
