Set fixed line height for events
Some Unicode caused uneven line heights.

--- a/src/Calendar/Day/EventView/EventView.module.css
+++ b/src/Calendar/Day/EventView/EventView.module.css
@@ -5,6 +5,7 @@
   padding: 2px 12px;
 
   font-size: 0.8em;
+  line-height: 1.2em;
   white-space: nowrap;
   text-overflow: ellipsis;
   background-color: lightblue;
